Revision history for Graphics-Primitive

0.07
  - Remove do_prepare
  - Add disclaimer
  - Add lines to Textbox and chop up input
  - Add optional layout manager to container
  - prepare now expects the driver to be passed in
  - Component's prepare sets minimum sizes to the outside ones

0.06
  - Add Driver
  - Set default border width to 0
  - Move component management out of LM and into Container
  - Move stuff from LM::Component role into Component
  - Remove LM dependency
  - Add Textbox
  - Change Component's inside_bounding_box origin to be a relative value

0.05
  - Don't prepare or draw invisible components in Containers

0.04
  - POD fixes
  - Add find_component and get_component as proxies in Container

0.03
  - Check for definedness of components in a Container before prepare & draw

0.02
  - Add visible to component
  - Fix Description
  - Add MI version because Yuval yelled at me

0.01    Date/time
        First version, released on an unsuspecting world.
